methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:9: error: ';' expected but 'else' found.
   else if(estFaceMur==true){
   ^