methods.returning.MethodsReturning.scala.code

def haveBaggle():Boolean = {
  var i=0
 for(i<-1 to 6) {
  if (vuBiscuit==true){
    return true
  }
  avance() 
   else if(estFaceMur==true){
     recule()
   }
    }
  
      }